# image-reterieval

./: 256x256_UPGRADE.md  BUILD_INSTRUCTIONS.md  README.md  RECOGNITION_FIXES.md  ROTATION_RECOGNITION.md  a_path_generator.py  anotation_generator.py  coords.csv  image_corpper.py  image_renamer.py  rotation.py  rotation_demo.cpp  runPython.py  test_256x256.cpp  test_rotation.cpp  text.txt
src/: CMakeLists.txt  Makefile  build.ps1  build_and_run.sh  build_cpu_only.sh  build_linux.sh  build_linux_simple.sh  build_raspberry_pi.sh  build_simple.bat  build_test.sh  build_windows.bat  letter_recognition.cpp  letter_recognition.h  main.cpp  recognize.cpp  remove_cuda.sh  template_generator.cpp  test_coordinates.csv  test_paths.cpp  test_recognition.cpp
src/build_cpu/: CMakeCache.txt  Makefile  cmake_install.cmake
